--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,15 @@
-aiofiles==24.1.0
-aiogram==3.20.0.post0
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
-annotated-types==0.7.0
-async-timeout==5.0.1
-attrs==25.3.0
-bcrypt==4.3.0
-certifi==2025.4.26
-cffi==1.17.1
-cryptography==44.0.3
-dotenv==0.9.9
-frozenlist==1.6.0
-idna==3.10
-magic-filter==1.0.12
-multidict==6.4.3
-paramiko==3.5.1
-propcache==0.3.1
-pycparser==2.22
-pydantic==2.11.4
-pydantic_core==2.33.2
-PyNaCl==1.5.0
-python-dotenv==1.1.0
-storage==0.0.4.3
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-yarl==1.20.0
+aiofiles==24.1.0           # Fayl bilan async ishlash, foydali
+aiogram==3.20.0.post0      # Asosiy kutubxona
+aiohttp==3.11.18           # Aiogram ichida ishlatiladi
+aiosignal==1.3.2           # aiohttp ichki bog‘liqligi
+async-timeout==5.0.1       # aiohttp ichki bog‘liqligi
+attrs==25.3.0              # aiohttp va boshqa kutubxonalarga kerak
+frozenlist==1.6.0          # aiohttp uchun kerak
+idna==3.10                 # HTTP/S URL ishlovchi kutubxonalarga kerak
+magic-filter==1.0.12       # Aiogram uchun kerak
+multidict==6.4.3           # aiohttp uchun kerak
+pydantic==2.11.4           # Aiogramda ishlatiladi
+pydantic_core==2.33.2      # Pydantic ishlashi uchun kerak
+python-dotenv==1.1.0       # .env fayl o‘qish uchun (odatda foydali)
+typing_extensions==4.13.2  # Aiogram va Pydanticda ishlatiladi
+yarl==1.20.0               # aiohttp uchun kerak
